unpackaged/main/default/objects/litify_pm__Pain_Level__c/litify_pm__Pain_Level__c.object-meta.xml
<CustomObject>
    <label>Pain Level</label>
    <nameField>
        <displayFormat>PNL-{0000}</displayFormat>
        <label>Pain Level Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pain Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>