unpackaged/main/default/objects/litify_pm__Pain_Level__c/fields/litify_pm__Pain_Level_as_of__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Pain_Level_as_of__c</fullName>
    <label>Pain Level as of</label>
    <type>Date</type>
</CustomField>